Classes in com.zufar.icedlatte.product were updated and improved.